cmake_minimum_required(VERSION 3.9)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
project(RoboNeko CXX)
if(WIN32)
SET(SDL2_DIR "C:/opt/SDL2-2.0.9/")
if(MINGW)
SET(SDL2_DIR "C:/SDL2-2.0.9/x86_64-w64-mingw32")
endif(MINGW)
endif()
find_package(SDL2 REQUIRED)
file(GLOB SOURCES ${PROJECT_NAME}/*cpp)
file(GLOB HEADERS ${PROJECT_NAME}/*.h*)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
if(APPLE)
	set(MACOSX_BUNDLE_ICON_FILE roboneko.icns)
	set(RoboNeko_ICON ${CMAKE_CURRENT_SOURCE_DIR}/resources/roboneko.icns)
	set_source_files_properties(${RoboNeko_ICON} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
	add_executable(RoboNeko MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RoboNeko_ICON})
elseif(WIN32)
	set(WIN_RESOURCE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/resources/roboneko.rc)
	add_executable(RoboNeko WIN32 ${SOURCES} ${HEADERS} ${WIN_RESOURCE_FILE})
else()
	add_executable(RoboNeko ${SOURCES} ${HEADERS}) 
endif()
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
